# arden-opds

./: Cargo.toml  README.md
src/: logger.rs  main.rs
src/opds/: mod.rs  v1_2.rs
src/services/: mod.rs
src/services/admin/: mod.rs
src/services/v1_2/: catalog.rs  mod.rs
