[package]
name = "adren-opds"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.4"
atom_syndication = "0.9"
chrono = "0.4"
color-eyre = "0.5"
futures = "0.3"
quick-xml = { version = "0.22", features = [ "serialize" ] }
rusoto_core = "0.46"
rusoto_s3 = "0.46"
serde = { version = "1.0", features = [ "derive" ] }
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres", "chrono", "uuid" ] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = [ "v4" ] }
